--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
-
 [project]
 name = "ggce"
 authors = [
@@ -12,72 +8,32 @@ maintainers = [
     {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"},
     {"name" = "Stepan Fomichev", "email" = "fomichev@physics.ubc.ca"}
 ]
-description = "Numerically exact Generalized Green's Function Cluster Expansion"
-readme = "README.rst"
-requires-python = ">=3.7"
-license = {"file" = "LICENSE"}
-classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
-    "Natural Language :: English",
-    "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3",
-    "Topic :: Scientific/Engineering",
-    "Intended Audience :: Developers",
-    "Intended Audience :: Education",
-    "Intended Audience :: Science/Research",
-]
-dependencies = [
-    "numpy<1.24",
-    "scipy",
-    "loguru",
-    "monty",
-    "tqdm"
-]
-
 dynamic = ["version"]
-
-
-[project.optional-dependencies]
-test = [
-    "codecov",
-    "coverage",
-    "flake8",
-    "pytest",
-    "pytest-cov",
-    "black",
-    "nbstripout",
-    "pre-commit"
-]
-doc = [
-    "sphinx",
-    "numpydoc",
-    "sphinx-copybutton",
-    "sphinx_rtd_theme",
-    "ipython",
-    "matplotlib"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.9"
+dependencies = [
+    "loguru>=0.7.3",
+    "monty>=2024.10.21",
+    "numpy<1.24",
+    "scipy>=1.13.1",
+    "tqdm>=4.67.1",
 ]
 
-[tool.setuptools]
-packages = ["ggce"]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.black]
-line-length = 79
-include = '\.pyi?$'
-exclude = '''
-/(
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-  | docs/source/conf.py
-  | legacy
-)/
-'''
+[tool.hatch.version]
+path = "ggce/_version.py"
+
+
+[tool.ruff]
+line-length = 80
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+docstring-code-format = true
+docstring-code-line-length = 60
+exclude = ["ggce/_version.py"]
